<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/top">

    <TextView
        android:id="@+id/tv_roomId"
        android:text="@string/roomId"
        style="@style/room_setting_tv"/>

    <EditText
        android:id="@+id/et_roomId"
        android:hint="@string/room_hint"
        style="@style/room_setting_et"/>

    <TextView
        android:id="@+id/tv_platform"
        android:text="@string/platformId"
        android:layout_below="@+id/tv_roomId"
        style="@style/room_setting_tv"/>

    <EditText
        android:id="@+id/et_platform"
        android:layout_below="@+id/et_roomId"
        android:hint="@string/platform_hint"
        style="@style/room_setting_et"/>


    <TextView
        android:id="@+id/tv_user_id"
        android:text="@string/user_id"
        android:layout_below="@+id/tv_platform"
        style="@style/room_setting_tv"/>

    <EditText
        android:id="@+id/et_user_id"
        android:layout_below="@+id/et_platform"
        style="@style/room_setting_et"/>

    <TextView
        android:id="@+id/tv_user_name"
        android:text="@string/user_name"
        android:layout_below="@+id/tv_user_id"
        style="@style/room_setting_tv"/>

    <EditText
        android:id="@+id/et_user_name"
        android:layout_below="@+id/et_user_id"
        style="@style/room_setting_et"/>


</RelativeLayout>