<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_bg"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_appkey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/appkey"
        android:textColor="@color/text_white"
        android:textSize="@dimen/text_title"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_appkey"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/tv_appkey"
        android:background="@drawable/et_bg"
        android:hint="@string/appkey_hint"
        android:padding="5dp"
        android:textColor="@color/text_nomal_black"
        android:textColorHint="@color/text_nomal_black"
        android:textSize="@dimen/text_content" />


    <TextView
        android:id="@+id/tv_uri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_appkey"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/uri"
        android:textColor="@color/text_white"
        android:textSize="@dimen/text_title"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_uri"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_appkey"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/tv_uri"
        android:background="@drawable/et_bg"
        android:hint="@string/appkey_hint"
        android:padding="5dp"
        android:textColor="@color/text_nomal_black"
        android:textColorHint="@color/text_nomal_black"
        android:textSize="@dimen/text_content" />

    <RadioGroup
        android:id="@+id/rg_select_mqtt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_uri"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_mqtt_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="开启MQTT" />

        <RadioButton
            android:id="@+id/rb_mqtt_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="关闭MQTT">


        </RadioButton>

    </RadioGroup>

    <RadioGroup
        android:id="@+id/rg_select_env"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rg_select_mqtt"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="测试环境" />

        <RadioButton
            android:id="@+id/rb_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="预发布环境" />

        <RadioButton
            android:id="@+id/rb_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="正式环境" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_dianbo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg_select_env"
        android:layout_margin="10dp"
        android:background="@drawable/et_bg"
        android:text="@string/apply_btn"
        android:textColor="@color/text_nomal_black" />

</RelativeLayout>